--- a/style.css
+++ b/style.css
@@ -205,8 +205,8 @@ h3 {
 .social.twitter:before {
   background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Twitter-07-128.png") center no-repeat;
 }
-.social.pinterest:before {
-  background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Pinterest-23-128.png") center no-repeat;
+.social.GitHub:before {
+  background: url("https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-512.png") center no-repeat;
 }
 .social.linked-in:before {
   background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_LinkedIn-128.png") center no-repeat;
